# TodoExample

./: .gitignore  docker-compose.yaml  package-lock.json  readme.md
backend/: .env.example  12  app.py  dockerfile  initTests.sh  pyproject.toml  readme.md  requirements.txt
backend/auth/: __init__.py  jwt.py  user.py
backend/db/: __init__.py  partials.py
backend/errors/: InputException.py  __init__.py  generic_exceptions.py
backend/models/: auth.py  todo.py
backend/prisma/: schema.prisma
backend/routes/: __init__.py  auth.py  todo.py  users.py
backend/test/: conftest.py  test_auth.py  test_init.py  test_todo.py  test_users.py
frontend/: dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  readme.md
frontend/src/api/: auth.ts  base.ts  index.ts  todo.ts  user.ts
frontend/src/app/: Providers.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: AuthRefresher.tsx  RequiresAuth.tsx  authManager.ts
frontend/src/app/login/: LoginForm.tsx  page.tsx
frontend/src/app/register/: RegisterForm.tsx  page.tsx
frontend/src/app/todo/: CreateTodo.tsx  TodoList.tsx  page.tsx
frontend/src/components/: Header.tsx  UserDisplay.tsx
frontend/src/components/todo/: TodoEditDialog.tsx  TodoElement.tsx  TodoForm.tsx
frontend/src/components/ui/: button.tsx  confirmation.tsx  dialog.tsx  input.tsx  label.tsx  link.tsx
frontend/src/query/: auth.ts  index.ts  todos.ts  users.ts
frontend/src/types/: auth.ts  common.ts  error.ts  todo.ts
prisma/: schema.prisma
