[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
annotated-types="0.6.0"
anyio="3.7.1"
async-generator="1.10"
bcrypt="4.1.2"
crypto="1.4.1"
docopt-ng="0.8.1"
ecdsa="0.18.0"
exceptiongroup="1.2.0"
fastapi="0.109.0"
gdtoolkit="4.1.0"
httptools="0.6.1"
lark="1.1.5"
mando="0.7.1"
markdown-it-py="3.0.0"
mdurl="0.1.2"
nodeenv="1.8.0"
outcome="1.3.0.post0"
prisma="0.12.0"
pyasn1="0.5.1"
pycryptodome="3.15.0"
pydantic="2.5.3"
pydantic_core="2.14.6"
Pygments="2.17.2"
PyJWT="2.8.0"
python-jose={extras = ["cryptography"], version = "^3.3.0"}
python-multipart="0.0.6"
radon="6.0.1"
regex="2023.8.8"
rich="13.7.0"
rsa="4.9"
shellescape="3.8.1"
sortedcontainers="2.4.0"
starlette="0.35.1"
StrEnum="0.4.15"
termcolor="2.3.0"
tomlkit="0.12.3"
tqdm="4.64.1"
trio="0.21.0"
typing_extensions="4.9.0"
uvicorn="0.27.0"
uvloop="0.19.0"
watchfiles="0.21.0"
websockets="12.0"
pytest = "^8.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
