[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Maciej Chorzępa <maciej.chorzepa17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
bcrypt = "^4.1.2"
uvicorn = "^0.27.0.post1"
pytest = "^8.0.0"
prisma = "^0.12.0"
python-jose={extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
